test/expressions/casts/CastCArrayToCPtr-multiple.32.good
CastCArrayToCPtr-multiple.chpl:49: error: const actual is passed to 'ref' formal 'x' of operator :
